# psqlgml

./: .editorconfig  .pre-commit-config.yaml  .secrets.baseline  .travis.yml  LICENSE  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: psqlgml.yaml
docs/source/: index.rst
schemas/gdcdictionary/2.4.1-rc.1/: schema.json  schema.yaml
src/psqlgml/: __init__.py  cli.py  core.py  dictionary.py  models.py  repository.py  resources.py  schema.py  types.py  typings.py  validators.py  visualization.py  visualize.py
src/psqlgml/dictionaries/: readers.py  repository.py  schemas.py
src/psqlgml/schema/: gdc.json  gdc.yaml  gpas.json  gpas.yaml
src/psqlgml/templates/: schema.jinja
src/psqlml/: cli.py  models.py  tick.py  validator.py  visualize.py
src/psqlml/schema/0.1.0/: gdc.json  gdc.yaml  gpas.json  gpas.yaml
src/psqlml/templates/: schema.jinja
tests/: conftest.py  helpers.py
tests/data/: simple_valid.json  simple_valid.yaml
tests/data/dictionary/0.1.0/samples/: project.yaml
tests/data/invalid/: invalid.yaml
tests/integration/: test_dictionary.py  test_script.py
tests/unit/: conftest.py  test_dictionary.py  test_git_repository.py  test_readers.py  test_repository.py  test_resources.py  test_schema.py  test_validators.py  test_visualization.py
