[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
local_scheme = "dirty-tag"
version_scheme = "release-branch-semver"

[tool.black]
line-length = 98
include = '\.pyi?$'


[tool.coverage.run]
branch = true
context = "unit tests"
source = ["pgraphml"]

[tool.coverage.html]
title = "pgraphml coverage report"
directory = "docs/htmlcov"
show_contexts = true

[tool.isort]
profile = "black"
known_first_party = ["pgraphml"]

[tool.mypy]
pretty = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_untyped_calls = true
strict_optional = true
no_implicit_optional = true
check_untyped_defs = true
